--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   }
 }
